scriptless JSP review
练习JSP

--- a/LearningServlet/src/main/webapp/el.html
+++ b/LearningServlet/src/main/webapp/el.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action = "ELTest.jsp">
+	<form action = "info.html">
 		名字: <input type="text" name="name" /><br />
 		邮箱: <input type="text" name="email" /><br />
 		兴趣: <input type="text" name="hobby" />
